# reddam_maintenance

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.py  create_db.py  docker-compose.yml  main.py  project_requirements.md  pyproject.toml  requirements.txt  testusers.txt  ux_timeline.md  w3resource.py
app/: __init__.py  api.py  app.py  emails.py  forms.py  models.py  queries.py  routes.py
app/static/css/: admin.css  authenticated.css  dashboard.css  unauthenticated.css
app/static/images/: site.webmanifest
app/static/jquery/: jquery-ui.min.css  jquery-ui.min.js  jquery-ui.structure.min.css  jquery-ui.theme.min.css
app/static/js/: admin.js  dashboard.js  member.js  worker.js
app/templates/: admin.html  auth_base.html  base.html  base_authenticated.html  change_password.html  dashboard.html  dashboard_base.html  forgot_pwd.html  login.html  member.html  profile.html  signup.html  worker.html
static/css/: unauthenticated.css
templates/: base.html  login.html
tests/: conftest.py  test_api.py
