[project]
name = "reddam-maintenance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.14.0",
    "bcrypt==4.2.1",
    "blinker==1.8.2",
    "cachecontrol==0.14.1",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "deprecated==1.2.18",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "flask==3.0.3",
    "flask-limiter==3.12",
    "flask-login==0.6.3",
    "flask-wtf==1.2.2",
    "greenlet==3.1.1",
    "idna==3.10",
    "iniconfig==2.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "limits==5.1.0",
    "lxml==5.3.0",
    "lxml-html-clean==0.3.1",
    "mako==1.3.8",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "msgpack==1.1.0",
    "mysql-connector-python==9.1.0",
    "ordered-set==4.1.0",
    "packaging==24.2",
    "password-strength==0.0.3.post2",
    "pluggy==1.5.0",
    "pygments==2.19.1",
    "pytest==8.3.4",
    "python-dotenv==1.0.1",
    "pywebcopy==7.0.2",
    "requests==2.32.3",
    "rich==13.9.4",
    "setuptools==80.8.0",
    "six==1.16.0",
    "sqlalchemy==2.0.36",
    "typing-extensions==4.12.2",
    "urllib3==2.2.3",
    "werkzeug==3.1.2",
    "wrapt==1.17.2",
    "wtforms==3.2.1",
]
